--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  },
   "dependencies": {
+    "chalk": "^4.1.2",
+    "moment": "^2.29.1",
     "node-sitef": "^1.4.0"
   }
 }
